--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,13 @@
 .video-wrapper {
     position: relative;
+    display: inline-block;
+    overflow: hidden;
+    line-height: 0;
     background-color: black;
 }
 
 .video-wrapper video {
     position: relative;
-    width: 100%;
-    height: 100%;
     z-index: 0;
 }
 
@@ -54,7 +55,6 @@
     align-items: center;
     width: 53px;
     padding: 0 20px;
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .icon {
