--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -1,86 +1,283 @@
 .video-wrapper {
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    line-height: 0;
-    background-color: black;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  line-height: 0;
+  background-color: black;
 }
 
 .video-wrapper video {
-    position: relative;
-    z-index: 0;
+  position: relative;
+  z-index: 0;
 }
 
 .controls-wrapper {
-    transition: opacity 0.2s, visibility 0.2s;
-    visibility: hidden;
-    opacity: 0;
+  transition: opacity 0.2s, visibility 0.2s;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  z-index: 3;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 130px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%) no-repeat bottom;
+  background-size :100% 130px;
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 15px;
+  padding-right: 15px;
 }
 
 .video-wrapper:hover .controls-wrapper{
-    visibility: visible;
-    opacity: 1;
-}
-
-.controls-background {
-    position: absolute;
-    z-index: 2;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 130px;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%) no-repeat bottom;
-    background-size :100% 130px
+  visibility: visible;
+  opacity: 1;
 }
 
 .controls {
-    position: absolute;
-    z-index: 3;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: auto;
-    background: none;
-}
-
-.controls-row {
-    display: flex;
-    align-items: center;
-    padding-top: 7px;
-    padding-bottom: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  text-align: center;
 }
 
 .play-control {
-    box-sizing: border-box;
-    align-items: center;
-    width: 53px;
-    padding: 0 20px;
+  position: relative;
+  display: inline-block;
+  flex-shrink: 0;
+  box-sizing: border-box;
+  align-items: center;
+  width: 53px;
+  padding: 0 20px;
+  line-height: 1;
+  text-align: center;
 }
 
 .icon {
-    display: block;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    color: white;
-    font-size: 16px;
-    opacity: 0.8;
-    transition-property: opacity;
-    transition-duration: 0.2s;
+  display: block;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+  opacity: 0.8;
+  transition-property: opacity;
+  transition-duration: 0.2s;
 }
 
 .play-control .icon:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .pause-icon {
-    display: none;
+  display: none;
 }
 
 .video-playing .play-icon {
-    display: none;
+  display: none;
 }
 
 .video-playing .pause-icon {
-    display: block;
+  display: block;
+}
+
+.controls canvas {
+  position: absolute;
+  top: -50px;
+  cursor: pointer;
+}
+
+.progress-bar {
+  position: relative;
+  display: inline-block;
+  flex: 1;
+}
+
+.seek-input {
+  position: relative;
+  z-index: 2;
+  display: block;
+  height: 20px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+}
+
+.progress-played, .progress-buffered {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 8px;
+  margin: -4px 0 0;
+  padding: 0;
+  vertical-align: top;
+  appearance: none;
+  border: none;
+  border-radius: 100px;
+}
+
+.progress-played {
+  z-index: 1;
+  color: #3498db;
+  background: 0 0;
+  transition: none;
+}
+
+.progress-buffered {
+  color: rgba(255,255,255,.25);
+  background: rgba(255,255,255,.25);
+}
+
+.progress-buffered::-webkit-progress-bar,
+.progress-played::-webkit-progress-bar {
+  background: transparent;
+}
+
+.progress-buffered::-webkit-progress-value,
+.progress-played::-webkit-progress-value {
+  background: currentColor;
+  border-radius: 100px;
+}
+
+.progress-buffered::-moz-progress-bar,
+.progress-played::-moz-progress-bar{
+  background: currentColor;
+  border-radius: 100px;
+ }
+
+.progress-buffered::-ms-fill,
+.progress-played::-ms-fill {
+  border-radius: 100px;
+}
+
+.progress-played::-webkit-progress-value {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  transition: none;
+}
+
+.progress-played::-moz-progress-bar {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  transition: none;
+}
+
+.progress-played::-ms-fill {
+  display: none;
+}
+
+.progress-buffered::-webkit-progress-value {
+  transition: width .2s ease;
+}
+.progress-buffered::-moz-progress-bar {
+  transition: width .2s ease;
+}
+.progress-buffered::-ms-fill {
+  transition: width .2s ease;
+}
+
+/* -------- STYLES FOR INPUT RANGE -------- */
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  margin-top: -4px;
+  border-radius: 100%;
+  height: 16px;
+  width: 16px;
+  background: #ffffff;
+  cursor: pointer;
+  transition: transform .15s ease;
+}
+
+/* All the same stuff for Firefox */
+input[type=range]::-moz-range-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 100%;
+  background: #ffffff;
+  cursor: pointer;
+  transition: transform .15s ease;
+}
+
+/* All the same stuff for IE */
+input[type=range]::-ms-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 100%;
+  background: #ffffff;
+  cursor: pointer;
+  transition: transform .15s ease;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: transparent;
+}
+
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: transparent;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+  background: transparent;
+
+}
+
+input[type=range]::-ms-fill-upper {
+  background: transparent;
+}
+
+input[type=range]:active::-webkit-slider-thumb
+{
+  transform: scale(1.25);
+}
+input[type=range]:active::-moz-range-thumb
+{
+  transform: scale(1.25);
+}
+input[type=range]:active::-ms-thumb
+{
+  transform: scale(1.25);
 }
