--- a/test/mock/index.ejs
+++ b/test/mock/index.ejs
@@ -16,7 +16,11 @@
     var player = new VideoPlayer({
         width: 700,
         height: 394,
-        src: 'https://live-ftv.wixmp.com/ftvoriginal/m3u8s/stream.m3u8',
+        muted: true,
+        src: [
+          'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
+        ],
+        enableLogger: true,
         poster: 'https://static.wixstatic.com/media/4d7ad7_0c64bd651390448fb749a123b09655ec~mv2.jpg'
     });
     document.getElementById('content').appendChild(player.node);
