--- a/src/ui/scss/controls.scss
+++ b/src/ui/scss/controls.scss
@@ -20,8 +20,8 @@
 
   .icon {
     display: block;
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     cursor: pointer;
     color: white;
     font-size: 16px;
@@ -53,6 +53,7 @@
   position: relative;
   display: inline-block;
   flex: 1;
+  margin-right: 20px;
 }
 
 .seek-input {
@@ -66,68 +67,76 @@
   vertical-align: middle;
 }
 
-.progress-played, .progress-buffered {
+.progress-played,
+.progress-buffered,
+.volume-level {
   position: absolute;
   left: 0;
   top: 50%;
   width: 100%;
   height: 3px;
-  margin: -1px 0 0;
+  margin: -2px 0 0;
   padding: 0;
   vertical-align: top;
   appearance: none;
   border: none;
   border-radius: 100px;
+
+  &::-webkit-progress-bar {
+    background: transparent;
+  }
+  &::-webkit-progress-value {
+    background: currentColor;
+    border-radius: 100px;
+    min-width: 3px;
+  }
+  &::-moz-progress-bar {
+    background: currentColor;
+    border-radius: 100px;
+    min-width: 3px;
+  }
+  &::-ms-fill {
+    border-radius: 100px;
+  }
+}
+
+.progress-played,
+.volume-level {
+  z-index: 1;
+  transition: none;
+
+  &::-webkit-progress-value {
+    min-width: 3px;
+    max-width: 99%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    transition: none;
+  }
+  &::-moz-progress-bar {
+    min-width: 3px;
+    max-width: 99%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    transition: none;
+  }
+  &::-ms-fill {
+    display: none;
+  }
 }
 
 .progress-played {
-  z-index: 1;
   color: #3498db;
   background: 0 0;
-  transition: none;
+}
+
+.volume-level {
+  color: white;
+  background: rgba(255,255,255,.25);
 }
 
 .progress-buffered {
   color: rgba(255,255,255,.25);
   background: rgba(255,255,255,.25);
-}
-
-.progress-buffered::-webkit-progress-bar,
-.progress-played::-webkit-progress-bar {
-  background: transparent;
-}
-
-.progress-buffered::-webkit-progress-value,
-.progress-played::-webkit-progress-value {
-  background: currentColor;
-  border-radius: 100px;
-}
-
-.progress-buffered::-moz-progress-bar,
-.progress-played::-moz-progress-bar{
-  background: currentColor;
-  border-radius: 100px;
-}
-
-.progress-buffered::-ms-fill,
-.progress-played::-ms-fill {
-  border-radius: 100px;
-}
-
-.progress-played::-webkit-progress-value {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  transition: none;
-}
-
-.progress-played::-moz-progress-bar {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  transition: none;
-}
-
-.progress-played::-ms-fill {
-  display: none;
 }
 
 .progress-buffered::-webkit-progress-value {
@@ -170,8 +179,8 @@
     -webkit-appearance: none;
     margin-top: -4px;
     border-radius: 100%;
-    height: 16px;
-    width: 16px;
+    height: 15px;
+    width: 15px;
     background: #ffffff;
     cursor: pointer;
     transition: transform .15s ease;
@@ -179,8 +188,8 @@
 
   /* All the same stuff for Firefox */
   input[type=range]::-moz-range-thumb {
-    height: 16px;
-    width: 16px;
+    height: 15px;
+    width: 15px;
     border-radius: 100%;
     background: #ffffff;
     cursor: pointer;
@@ -189,8 +198,8 @@
 
   /* All the same stuff for IE */
   input[type=range]::-ms-thumb {
-    height: 16px;
-    width: 16px;
+    height: 15px;
+    width: 15px;
     border-radius: 100%;
     background: #ffffff;
     cursor: pointer;
@@ -239,12 +248,14 @@
   input[type=range]:active::-ms-thumb {
     transform: scale(1.25);
   }
+}
 
-  .time-wrapper {
-    display: inline-block;
-    flex: 0 0 auto;
-    margin: 0 20px
-  }
+.time-wrapper {
+  display: flex;
+  flex: 0 0 auto;
+  height: 18px;
+  margin: 0 20px;
+  align-items: center;
 
   .time {
     line-height: 1px;
@@ -259,5 +270,67 @@
       margin-left: 5px
     }
   }
-
 }
+
+.volume-control {
+  position: relative;
+  display: flex;
+  flex: 1;
+  max-width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+
+  .volume-icon {
+    width: 20px;
+    height: 20px;
+    opacity: 0.8;
+    cursor: pointer;
+
+    &.hidden {
+      display: none;
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+
+  .volume-inner-wrapper {
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+    padding: 10px;
+    transform: rotate(-90deg);
+    width: 100px;
+    position: absolute;
+    left: -45px;
+    top: -80px;
+    flex: 1;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: visibility 0.2s, opacity 0.2s, display 0.2s;
+
+    .volume-input-wrapper {
+      width: 100px;
+
+      .volume-level {
+        width: 100px;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  &:hover {
+    .volume-inner-wrapper {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    .volume-icon {
+      width: 20px;
+      height: 20px;
+      opacity: 1;
+    }
+  }
+}
+
+
