Style fixes for IE10+

--- a/src/ui/scss/index.scss
+++ b/src/ui/scss/index.scss
@@ -1,3 +1,9 @@
+@import "mixins";
 @import "ui";
 @import "controls";
 @import "overlay";
+@import "progress-bar";
+@import "input-range";
+@import "volume";
+@import "play";
+@import "time-indicator";
