--- a/test/mock/index.ejs
+++ b/test/mock/index.ejs
@@ -16,7 +16,7 @@
     var player = new VideoPlayer({
         width: 700,
         height: 394,
-        //muted: true,
+        muted: false,
         src: [
           'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
         ],
