--- a/test/mock/index.ejs
+++ b/test/mock/index.ejs
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Video Player</title>
+    <style>
+      #content {
+        width: 625px;
+        height: 351px;
+      }
+    </style>
     <% if (debug) { %>
       <script src="<%= staticsBaseUrl %>video-player.bundle.js"></script>
     <% } else { %>
