--- a/src/ui/scss/controls.scss
+++ b/src/ui/scss/controls.scss
@@ -1,9 +1,8 @@
 .controls {
   width: 100%;
+  max-width: 100%;
   display: flex;
   align-items: center;
-  line-height: 1;
-  text-align: center;
 }
 
 .icon {
