--- a/src/ui/scss/ui.scss
+++ b/src/ui/scss/ui.scss
@@ -1,24 +1,30 @@
 .video-wrapper {
+  width: 100%;
+  height: 100%;
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   line-height: 0;
   background-color: black;
 
   video {
+    width: 100%;
+    height: 100%;
     position: relative;
     z-index: 0;
   }
 
   .controls-wrapper {
-    transition: opacity 0.2s, visibility 0.2s;
-    visibility: hidden;
-    opacity: 0;
     position: absolute;
-    z-index: 3;
     left: 0;
     right: 0;
     bottom: 0;
+    transition: opacity 0.2s, visibility 0.2s;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 3;
     height: 130px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%) no-repeat bottom;
     background-size :100% 130px;
