Styles sorted by csscomb

--- a/src/ui/scss/controls.scss
+++ b/src/ui/scss/controls.scss
@@ -1,19 +1,23 @@
 .controls {
+  display: flex;
+
   width: 100%;
   max-width: 100%;
-  display: flex;
+
   align-items: center;
 }
 
 .icon {
   cursor: pointer;
-  opacity: 0.8;
+  transition-duration: .2s;
   transition-property: opacity;
-  transition-duration: 0.2s;
+
+  opacity: .8;
 
   &.hidden {
     display: none;
     visibility: hidden;
+
     opacity: 0;
   }
 
@@ -21,5 +25,3 @@
     opacity: 1;
   }
 }
-
-
