--- a/src/ui/scss/time-indicator.scss
+++ b/src/ui/scss/time-indicator.scss
@@ -1,22 +1,25 @@
 .time-wrapper {
   display: flex;
   flex: 0 0 auto;
+
+  width: 75px;
   height: 18px;
   margin: 0 20px;
+
   align-items: center;
-  width: 75px;
 
   .time {
-    line-height: 1px;
+    font-family: HelveticaNeueW01-55Roma,HelveticaNeueW02-55Roma,HelveticaNeueW10-55Roma,Helvetica Neue,ruble,Helvetica,Arial,sans-serif;
     font-size: 12px;
+    line-height: 1px;
+
     color: hsla(0,0%,100%,.8);
-    font-family: HelveticaNeueW01-55Roma,HelveticaNeueW02-55Roma,HelveticaNeueW10-55Roma,Helvetica Neue,ruble,Helvetica,Arial,sans-serif;
 
     &.current {
-      margin-right: 5px
+      margin-right: 5px;
     }
     &.duration {
-      margin-left: 5px
+      margin-left: 5px;
     }
   }
 }
