--- a/src/ui/scss/index.scss
+++ b/src/ui/scss/index.scss
@@ -1,10 +1,10 @@
-@import "mixins";
-@import "ui";
-@import "controls";
-@import "overlay";
-@import "progress-bar";
-@import "input-range";
-@import "volume";
-@import "play";
-@import "time-indicator";
-@import "fullscreen";
+@import 'mixins';
+@import 'ui';
+@import 'controls';
+@import 'overlay';
+@import 'progress-bar';
+@import 'input-range';
+@import 'volume';
+@import 'play';
+@import 'time-indicator';
+@import 'fullscreen';
