--- a/src/ui/scss/mixins.scss
+++ b/src/ui/scss/mixins.scss
@@ -1,19 +1,24 @@
 @mixin plyr-range-track() {
   height: 8px;
+
   cursor: pointer;
-  background: transparent;
+  user-select: none;
+
   border: 0;
   border-radius: 4px;
-  user-select: none;
+  background: transparent;
 }
 @mixin plyr-range-thumb() {
-  border-radius: 100%;
-  height: 16px;
+  position: relative;
+
+  box-sizing: border-box;
   width: 16px;
-  background: #ffffff;
+  height: 16px;
+
   cursor: pointer;
   transition: transform .15s ease;
-  border: none;
-  position: relative;
-  box-sizing: border-box;
+
+  border: none;
+  border-radius: 100%;
+  background: #fff;
 }
