--- a/src/ui/scss/overlay.scss
+++ b/src/ui/scss/overlay.scss
@@ -1,34 +1,41 @@
 .overlay {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 100;
   top: 0;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
+
+  display: flex;
+
   width: 100%;
   height: 100%;
-  background-size: 100% 100%;
+
   background-color: black;
+  background-size: 100% 100%;
+
+  justify-content: center;
+  align-items: center;
 
   &.hidden {
     display: none;
     visibility: hidden;
+
     opacity: 0;
   }
 
   .play-wrapper {
-    background-color: #3498db;
     width: 30px;
     height: 30px;
-    cursor: pointer;
-    border-radius: 100%;
-    border: 5px solid white;
     padding: 15px 11px 15px 19px;
-    opacity: 0.9;
-    transition: opacity 0.2s, transform 0.1s;
+
+    cursor: pointer;
+    transition: opacity .2s, transform .1s;
+
+    opacity: .9;
+    border: 5px solid white;
+    border-radius: 100%;
+    background-color: #3498db;
 
     &:hover {
       opacity: 1;
