--- a/src/ui/scss/ui.scss
+++ b/src/ui/scss/ui.scss
@@ -1,41 +1,53 @@
 .video-wrapper {
+  line-height: 0;
+
+  position: relative;
+
+  display: flex;
+  overflow: hidden;
+
   width: 100%;
   height: 100%;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  line-height: 0;
+
   background-color: black;
 
+  justify-content: center;
+  align-items: center;
+
   video {
+    position: relative;
+    z-index: 0;
+
     width: 100%;
     height: 100%;
-    position: relative;
-    z-index: 0;
   }
 
   .controls-wrapper {
     position: absolute;
-    left: 0;
+    z-index: 3;
     right: 0;
     bottom: 0;
-    transition: opacity 0.2s, visibility 0.2s;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 3;
-    height: 130px;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%) no-repeat bottom;
-    background-size :100% 130px;
+    left: 0;
+
     display: flex;
-    align-items: flex-end;
-    padding-bottom: 15px;
+    visibility: hidden;
+
+    height: 130px;
     padding-right: 20px;
+    padding-bottom: 15px;
+
+    transition: opacity .2s, visibility .2s;
+
+    opacity: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 100%) no-repeat bottom;
+    background-size: 100% 130px;
+
+    align-items: flex-end;
   }
 }
 
-.video-wrapper:hover .controls-wrapper{
+.video-wrapper:hover .controls-wrapper {
   visibility: visible;
+
   opacity: 1;
 }
