Extending config with new values

--- a/src/ui/scss/time-indicator.scss
+++ b/src/ui/scss/time-indicator.scss
@@ -4,12 +4,13 @@
 
   width: 75px;
   height: 18px;
-  margin: 0 20px;
+  margin-right: 20px;
 
   align-items: center;
 
   .time {
-    font-family: HelveticaNeueW01-55Roma,HelveticaNeueW02-55Roma,HelveticaNeueW10-55Roma,Helvetica Neue,ruble,Helvetica,Arial,sans-serif;
+    font-family: HelveticaNeueW01-55Roma,HelveticaNeueW02-55Roma,HelveticaNeueW10-55Roma,Helvetica Neue,ruble,Helvetica,Arial,sans-serif;
+
     font-size: 12px;
     line-height: 1px;
 
