--- a/test/mock/index.ejs
+++ b/test/mock/index.ejs
@@ -20,18 +20,28 @@
 <div id="content"></div>
 <script>
     var player = new VideoPlayer({
-        width: 700,
-        height: 394,
-        muted: false,
-        src: [
-          'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
-        ],
-        enableLogger: true,
-        ui: {
-          enableControls: true,
-          enableOverlay: true
-        },
-        poster: 'https://pbs.twimg.com/media/C3iThsgWcAAyXhm.jpg:large'
+      width: 700,
+      height: 394,
+      autoplay: false,
+      muted: false,
+      loop: true,
+      nativeControls: false,
+      preload: 'none',
+      poster: 'https://pbs.twimg.com/media/C3iThsgWcAAyXhm.jpg:large',
+
+      src: [
+        'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
+      ],
+
+      overlay: true,
+      controls: true,
+      timeIndicator: true,
+      progressControl: true,
+      volumeControl: true,
+      volume: 100,
+      fullscreenControl: true,
+
+      enableLogger: true
     });
     document.getElementById('content').appendChild(player.node);
 </script>
