--- a/src/ui/scss/play.scss
+++ b/src/ui/scss/play.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   width: 30px;
   height: 30px;
-  margin-left: 20px;
+  margin: 0 20px;
 
   align-items: center;
   justify-content: center;
