Components splited into view + controler; Added tests

--- a/test/mock/index.ejs
+++ b/test/mock/index.ejs
@@ -26,7 +26,7 @@
       muted: false,
       loop: true,
       nativeControls: false,
-      preload: 'none',
+      preload: 'auto',
       poster: 'https://pbs.twimg.com/media/C3iThsgWcAAyXhm.jpg:large',
 
       src: [
@@ -38,7 +38,7 @@
       timeIndicator: true,
       progressControl: true,
       volumeControl: true,
-      volume: 100,
+      volume: 0.5,
       fullscreenControl: true,
 
       enableLogger: true
