--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -27,28 +27,10 @@
   }
 
   .play-wrapper {
-    width: 30px;
-    height: 30px;
-    padding: 15px 11px 15px 19px;
-
-    cursor: pointer;
-    transition: opacity .2s, transform .1s;
-
-    opacity: .9;
-    border: 5px solid white;
-    border-radius: 100%;
-    background-color: #3498db;
-
-    &:hover {
-      opacity: 1;
-    }
-    &:active {
-      transform: scale(1.1);
-    }
-
     img {
-      width: 100%;
-      height: 100%;
+      width: 14px;
+      height: 14px;
+      margin-right: 5px;
     }
   }
 }
