--- a/src/ui/shared.scss
+++ b/src/ui/shared.scss
@@ -1,26 +1,32 @@
-.video-wrapper {
-  line-height: 0;
+$color-main: #3899ec !default;
+$color-hover: #4eb7f5 !default;
+$video-progress-bg: transparentize(#fff, .75) !default;
+$font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-45Ligh,Helvetica Neue,Helvetica,Arial,\\30E1\30A4\30EA\30AA,meiryo,\\30D2\30E9\30AE\30CE\89D2\30B4 pro w3,hiragino kaku gothic pro;
 
+@mixin range-track() {
+  height: 8px;
+
+  cursor: pointer;
+  user-select: none;
+
+  border: 0;
+  border-radius: 4px;
+  background: transparent;
+}
+
+@mixin range-thumb() {
   position: relative;
 
-  display: flex;
-  overflow: hidden;
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
 
-  width: 100%;
-  height: 100%;
+  cursor: pointer;
+  transition: transform .15s ease;
 
-  background-color: black;
-
-  justify-content: center;
-  align-items: center;
-
-  video {
-    position: relative;
-    z-index: 0;
-
-    width: 100%;
-    height: 100%;
-  }
+  border: none;
+  border-radius: 100%;
+  background: #fff;
 }
 
 .icon {
@@ -42,29 +48,40 @@
   }
 }
 
-@mixin range-track() {
-  height: 8px;
+.button {
+  font-family: $font-family;
+  font-size: 16px;
+  line-height: 24px;
 
-  cursor: pointer;
-  user-select: none;
-
-  border: 0;
-  border-radius: 4px;
-  background: transparent;
-}
-@mixin range-thumb() {
-  position: relative;
+  display: flex;
 
   box-sizing: border-box;
-  width: 16px;
-  height: 16px;
+  height: 36px;
+  padding: 0 23px;
 
   cursor: pointer;
-  transition: transform .15s ease;
+  transition: background-color .1s linear,border-color .1s linear,color .1s linear;
+  text-align: center;
 
-  border: none;
-  border-radius: 100%;
-  background: #fff;
+  color: white;
+  color: #fff;
+  border: 1px solid $color-main;
+  border-radius: 18px;
+  outline: none;
+  background-color: $color-main;
+
+  align-items: center;
+  -webkit-font-smoothing: antialiased;
+
+  &:hover {
+    border-color: $color-hover;
+    background-color: $color-hover;
+  }
+
+  &:active {
+    border-color: $color-main;
+    background-color: $color-main;
+  }
 }
 
 .progress-bar {
@@ -139,7 +156,7 @@ input[type=range] {
   &::-ms-fill-lower {
     height: 4px;
 
-    background: #3498db;
+    background: $color-main;
 
     @include range-track();
   }
@@ -179,7 +196,3 @@ input[type=range] {
     }
   }
 }
-
-
-$color-main: #3498db !default;
-$video-progress-bg: transparentize(#fff, .75) !default;
