Extending API with new methods

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -41,12 +41,12 @@
       height: 427,
       autoplay: false,
       muted: false,
-      loop: true,
+      loop: false,
       nativeControls: false,
       preload: 'auto',
       poster: 'https://pbs.twimg.com/media/C3iThsgWcAAyXhm.jpg:large',
 
-      overlay: true,
+      overlay: false,
       controls: true,
       timeIndicator: true,
       progressControl: true,
