--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: black;
+  background-color: transparent;
   background-size: 100% 100%;
 
   justify-content: center;
