Style fix for hiding controls functionality

--- a/src/ui/shared.scss
+++ b/src/ui/shared.scss
@@ -46,6 +46,8 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
 
   width: 0 !important;
   height: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
 
   opacity: 0 !important;
 }
