Visual update for controls

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -40,7 +40,7 @@
     height: 427,
     autoplay: false,
     muted: false,
-    loop: true,
+    loop: false,
     nativeControls: false,
     preload: 'auto',
     src: [
