--- a/src/ui/controls/controls.scss
+++ b/src/ui/controls/controls.scss
@@ -11,7 +11,24 @@
   width: 100%;
   height: 100%;
 
-  .controls-wrapper {
+  .gradient-background {
+    position: absolute;
+    z-index: 3;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    visibility: hidden;
+
+    height: 100px;
+
+    transition: opacity .2s, visibility .2s;
+
+    opacity: 0;
+    background: url('./images/background.png') bottom repeat-x;
+  }
+
+  .controls {
     position: absolute;
     z-index: 3;
     right: 0;
@@ -21,30 +38,27 @@
     display: flex;
     visibility: hidden;
 
-    height: 130px;
-    padding-bottom: 15px;
+    width: 100%;
+    max-width: 100%;
+    height: 50px;
 
     transition: opacity .2s, visibility .2s;
 
     opacity: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 100%) no-repeat bottom;
-    background-size: 100% 130px;
 
-    align-items: flex-end;
-
-    .controls {
-      display: flex;
-
-      width: 100%;
-      max-width: 100%;
-
-      align-items: center;
-    }
+    align-items: center;
   }
+
 
   &.activated,
   &.video-paused {
-    .controls-wrapper {
+    .controls {
+      visibility: visible;
+
+      opacity: 1;
+    }
+
+    .gradient-background {
       visibility: visible;
 
       opacity: 1;
