Add export for constants

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -35,7 +35,7 @@
   </div>
 </div>
 <script>
-  var player = new VideoPlayer({
+  var player = new VideoPlayer.Player({
     width: 760,
     height: 427,
     autoplay: false,
