Move logic from controls.controler to controlers of controls

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -44,10 +44,7 @@
     src: [
       'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
     ],
-
-    overlay: {
-      poster: 'https://cs7050.vk.me/c626226/v626226133/4c4dd/fkg9iTcqoQI.jpg'
-    }
+    overlay: true
   });
   document.getElementById('player').appendChild(player.node);
 </script>
