--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -19,6 +19,14 @@
   justify-content: center;
   align-items: center;
 
+  .icon {
+    opacity: 1;
+
+    &:hover {
+      opacity: .8;
+    }
+  }
+
   .play-wrapper {
     img {
       width: 14px;
