--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -14,6 +14,7 @@
 
   user-select: none;
 
+  outline: none;
   background-color: black;
 
   justify-content: center;
@@ -25,5 +26,7 @@
 
     width: 100%;
     height: 100%;
+
+    outline: none;
   }
 }
