--- a/src/ui/controls/volume/volume.scss
+++ b/src/ui/controls/volume/volume.scss
@@ -68,6 +68,9 @@ $color: white !default;
     &::-webkit-slider-thumb {
       width: 12px;
       height: 12px;
+      margin-top: -1px;
+
+      -webkit-appearance: none;
     }
 
     &::-webkit-slider-runnable-track {
@@ -106,7 +109,7 @@ $color: white !default;
     flex: 1;
 
     min-width: 100px;
-    height: 16px;
+    height: 14px;
     padding: 10px;
 
     transition: visibility .2s, opacity .2s, display .2s;
