Small style tunning for volume and fullscreen controls

--- a/src/ui/controls/volume/volume.scss
+++ b/src/ui/controls/volume/volume.scss
@@ -56,7 +56,7 @@ $color: white !default;
 
   width: 12px;
   max-width: 12px;
-  padding: 0 15px;
+  margin: 0 23px 0 15px;
 
   justify-content: center;
   align-items: center;
