--- a/src/ui/shared.scss
+++ b/src/ui/shared.scss
@@ -85,7 +85,7 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
   }
 }
 
-input[type=range] {
+.range-control {
   display: block;
 
   width: 100%;
