fix overlay poster image size (#49)
Update overlay.scss

--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -13,8 +13,8 @@
   width: 100%;
   height: 100%;
 
-  background-color: black;
-  background-size: 100% 100%;
+  background: black no-repeat center;
+  background-size: contain;
 
   justify-content: center;
   align-items: center;
