Add absctraction for visualization of video playback

--- a/src/ui/screen/screen.scss
+++ b/src/ui/screen/screen.scss
@@ -1,9 +1,13 @@
 @import '../shared';
 
-.controls-block {
+.screen-block {
   position: absolute;
-  z-index: 10;
+  z-index: 5;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+
+  width: 100%;
+  height: 100%;
 }
