--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -9,9 +9,6 @@
   display: flex;
   overflow: hidden;
 
-  width: 100%;
-  height: 100%;
-
   user-select: none;
 
   outline: none;
@@ -19,6 +16,13 @@
 
   justify-content: center;
   align-items: center;
+
+  .inner-wrapper {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+  }
 
   video {
     position: relative;
