--- a/src/ui/controls/progress/progress.scss
+++ b/src/ui/controls/progress/progress.scss
@@ -14,6 +14,8 @@
     position: relative;
     z-index: 2;
 
+    height: 25px;
+
     &::-webkit-slider-runnable-track {
       background: transparent;
     }
@@ -34,7 +36,7 @@
 
   width: 100%;
   height: 3px;
-  margin: -1px 0 0;
+  margin: -1.5px 0 0;
   padding: 0;
 
   vertical-align: top;
@@ -46,18 +48,21 @@
   &::-webkit-progress-bar {
     background: transparent;
   }
+
   &::-webkit-progress-value {
     min-width: 3px;
 
     border-radius: 100px;
     background: currentColor;
   }
+
   &::-moz-progress-bar {
     min-width: 3px;
 
     border-radius: 100px;
     background: currentColor;
   }
+
   &::-ms-fill {
     border: none;
     border-radius: 100px;
