--- a/src/ui/screen/screen.scss
+++ b/src/ui/screen/screen.scss
@@ -7,9 +7,6 @@
   left: 0;
 
   display: flex;
-  visibility: visible;
-
-  opacity: 1;
 
   justify-content: center;
   align-items: center;
@@ -17,22 +14,27 @@
   img {
     position: relative;
 
-    width: 60px;
-    height: 60px;
+    animation-name: fade-out;
+    animation-duration: .5s;
+
+    opacity: 0;
   }
 }
 
-.disabled {
-  display: none;
-}
+@keyframes fade-out {
+  from {
+    width: 60px;
+    height: 60px;
 
-.fade-out {
-  visibility: hidden;
+    opacity: 1;
+  }
 
-  transition: visibility 1s, opacity 1s, transform 1s;
-  transform: scale(1.25);
+  to {
+    width: 75px;
+    height: 75px;
 
-  opacity: 0;
+    opacity: 0;
+  }
 }
 
 .screen-block {
